# axtreme

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE.html  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  api.html  axtreme.html  developer_content.html  genindex.html  getting_started.html  glossary.html  index.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js  usecase_offshorewind.html
.github/workflows/: _build_and_publish_documentation.yml  _test.yml  _test_future.yml
_autosummary/: axtreme.acquisition.html  axtreme.acquisition.qoi_look_ahead.QoILookAhead.html  axtreme.acquisition.qoi_look_ahead.html  axtreme.data.batch_invariant_sampler.BatchInvariantSampler2d.html  axtreme.data.batch_invariant_sampler.html  axtreme.data.dataset.MinimalDataset.html  axtreme.data.dataset.html  axtreme.data.fixed_random_sample.FixedRandomSampler.html  axtreme.data.fixed_random_sample.html  axtreme.data.html  axtreme.data.importance_dataset.ImportanceAddedWrapper.html  axtreme.data.importance_dataset.ImportanceIndexWrapper.html  axtreme.data.importance_dataset.html  axtreme.data.multi_dim_batch_sampler.MultiBatchSampler.html  axtreme.data.multi_dim_batch_sampler.html  axtreme.data.numpy_file_dataset.NumpyFileDataset.html  axtreme.data.numpy_file_dataset.html  axtreme.data.sizable_sequential_sample.SizableSequentialSampler.html  axtreme.data.sizable_sequential_sample.html  axtreme.distributions.helpers.html  axtreme.distributions.html  axtreme.distributions.icdf.html  axtreme.distributions.mixture.ApproximateMixture.html  axtreme.distributions.mixture.html  axtreme.distributions.utils.html  axtreme.eval.html  axtreme.eval.object_logging.html  axtreme.eval.qoi_helpers.html  axtreme.eval.qoi_job.QoIJob.html  axtreme.eval.qoi_job.QoIJobResult.html  axtreme.eval.qoi_job.html  axtreme.eval.utils.html  axtreme.evaluation.EvaluationFunction.html  axtreme.evaluation.SimulationPointResults.html  axtreme.evaluation.html  axtreme.experiment.html  axtreme.metrics.LocalMetadataMetric.html  axtreme.metrics.QoIMetric.html  axtreme.metrics.html  axtreme.plotting.doe.html  (+39 more)
_sources/: api.rst.txt  glossary.md.txt  index.rst.txt  introduction.md.txt  usecase_offshorewind.md.txt
_sources/_autosummary/: axtreme.acquisition.qoi_look_ahead.QoILookAhead.rst.txt  axtreme.data.batch_invariant_sampler.rst.txt  axtreme.data.importance_dataset.ImportanceAddedWrapper.rst.txt  axtreme.data.multi_dim_batch_sampler.rst.txt  axtreme.data.numpy_file_dataset.NumpyFileDataset.rst.txt  axtreme.data.numpy_file_dataset.rst.txt  axtreme.data.rst.txt  axtreme.data.sizable_sequential_sample.rst.txt  axtreme.distributions.icdf.rst.txt  axtreme.distributions.mixture.ApproximateMixture.rst.txt  axtreme.distributions.rst.txt  axtreme.distributions.utils.rst.txt  axtreme.eval.qoi_job.QoIJob.rst.txt  axtreme.eval.rst.txt  axtreme.eval.utils.rst.txt  axtreme.evaluation.EvaluationFunction.rst.txt  axtreme.evaluation.SimulationPointResults.rst.txt  axtreme.metrics.LocalMetadataMetric.rst.txt  axtreme.metrics.rst.txt  axtreme.plotting.doe.rst.txt  axtreme.plotting.gp_fit.rst.txt  axtreme.plotting.histogram3d.rst.txt  axtreme.plotting.rst.txt  axtreme.qoi.gp_bruteforce.GPBruteForce.rst.txt  axtreme.qoi.gp_bruteforce.rst.txt  axtreme.qoi.marginal_cdf_extrapolation.MarginalCDFExtrapolation.rst.txt  axtreme.qoi.marginal_cdf_extrapolation.rst.txt  axtreme.qoi.qoi_estimator.rst.txt  axtreme.qoi.rst.txt  axtreme.sampling.base.PosteriorSampler.rst.txt  axtreme.sampling.base.rst.txt  axtreme.sampling.independent_sampler.IndependentMCSampler.rst.txt  axtreme.sampling.mean_sampler.rst.txt  axtreme.sampling.normal_independent_sampler.NormalIndependentSampler.rst.txt  axtreme.sampling.normal_independent_sampler.rst.txt  axtreme.sampling.ut_sampler.UTSampler.rst.txt  axtreme.simulator.base.Simulator.rst.txt  axtreme.simulator.base.rst.txt  axtreme.simulator.rst.txt  axtreme.utils.model_helpers.rst.txt  (+3 more)
_sources/basic_concepts/: basic_concepts.rst.txt  doe.md.txt  qoi_estimate.md.txt  surrogate_model.md.txt
_sources/technical_details/: ax_integration.md.txt  gpbruteforce.md.txt  importance_sampling.md.txt  technical_details.rst.txt
basic_concepts/: basic_concepts.html  doe.html  qoi_estimate.html  surrogate_model.html
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  axtreme.html  developer_content.html  genindex.html  getting_started.html  glossary.html  index.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usecase_offshorewind.html
docs/dev/: GPU.md  Nvidia Nsight system.md
docs/source/: api.rst  axtreme.rst  cli.axtreme.rst  cli.my_package.rst  cli.rst  conf.py  getting_started.rst  glossary.md  index.rst  introduction.md  my_package.rst  usecase_offshorewind.md
examples/: __init__.py
examples/basic_project_example/: README.md  brute_force.py  doe.py  eda.py  env_data.py  experiment.py  problem.py  qoi_bias_var.py  simulator.py
examples/crest_heights_north_sea/: GP_eval.ipynb  README.md  brute_force.py  brute_force_loc_and_scale_estimates.py  create_importance_samples.py  doe.py  doe_dev.py  importance_sampling.py  optimal_doe.py  optimal_doe_run.py  problem.py  qoi.py  qoi_bias_var.py  simulator.py
examples/demo2d/: helpers.py
examples/importance_sampling_usecase/: env_data.py  simulator.py
src/axtreme/: __init__.py  api.py  evaluation.py  experiment.py  metrics.py
src/my_package/: __init__.py  api.py
technical_details/: ax_integration.html  doe.html  gpbruteforce.html  importance_sampling.html  technical_details.html
tests/: conftest.py  test_api.py  test_metrics.py
tests/acquisition/: test_module1.py  test_optimal_qoi_look_ahead.py  (+2 more)
tutorials/: README.md  basic_example.py  basic_example_doe_bf.py  data_guide.py  end_to_end_v2.py  getting_started.ipynb  getting_started.py  importance_sampling.py  importance_sampling_basic_example.py  qoi_estimator.ipynb
(+308 files in other folders)
