[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/axtreme",
    "tests",
    ".coveragerc",
    ".editorconfig",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/axtreme",
]

[project]
name = "axtreme"
version = "0.1.9"
description = "example package short description."
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Author One", email = "author.one@dnv.com" },
    { name = "Author Two", email = "author.two@dnv.com" },
]
maintainers = [
    { name = "Author Three", email = "author.three@dnv.com" },
]
keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dictIO>=0.3.4",
    "numpy>=1.26,<2.0",
    "torch==2.4.1",
]

[project.optional-dependencies]
cuda = [
    "torch==2.4.1+cu124",
]

[project.urls]
Homepage = "https://github.com/dnv-innersource/axtreme"
Documentation = "https://dnv-innersource.github.io/axtreme/README.html"
Repository = "https://github.com/dnv-innersource/axtreme.git"
Issues = "https://github.com/dnv-innersource/axtreme/issues"
Changelog = "https://github.com/dnv-innersource/axtreme/blob/main/CHANGELOG.md"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6.3",
    "pyright>=1.1.378",
    "mypy>=1.11.1",
    "sourcery>=1.22",
    "pre-commit>=3.8",
    "Sphinx>=8.0",
    "sphinx-argparse-cli>=1.17",
    "sphinx-autodoc-typehints>=2.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
    "nbconvert>=7.16",
    "jupyter>=1.0",
    "jupyter-client>=8.6",
    "pandas-stubs>=2.2",
    "types-tqdm>=4.66",
    "types-psutil>=6.0",
]
find-links = [
    "https://download.pytorch.org/whl/torch",
]
native-tls = true


[project.scripts]
axtreme = "axtreme.cli.axtreme:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "^src/folder_to_be_excluded/",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
